--- a/syllabus/cs591F2014-syllabus.tex
+++ b/syllabus/cs591F2014-syllabus.tex
@@ -1,3 +1,5 @@
+%!TEX root=cs591F2014-syllabus.tex
+% mainfile: cs591F2014-syllabus.tex 
 \input{syllabuspre.tex}
 
 \usepackage[compact]{titlesec}
@@ -18,11 +20,12 @@ Dr.\ Gregory M.\ Kapfhammer\\
 
 \begin{itemize}
 	\itemsep 0em
-	\item Monday: 1:00 pm -- 2:30 pm (30 minute time slots)
-	\item Tuesday: 2:30 pm -- 4:00 pm (15 minute time slots)
-	\item Wednesday: 4:30 pm -- 5:00 pm (15 minute time slots)
-	\item Thursday: 9:00 am -- 10:00 am (15 minute time slots) {\em and} \\ \hspace*{.69in} 2:30 pm -- 4:00 pm (15 minute time slots)
-	\item Friday: 1:00 pm -- 2:30 pm (10 minute time slots) {\em and} \\ \hspace*{.49in} 4:30 pm -- 5:00 pm (5 minute time slots)
+	\item Monday: 2:30 pm -- 5:00 pm (15 minute time slots)
+	\item Tuesday: 2:30 pm -- 5:00 pm (15 minute time slots)
+        \item Wednesday: 10:00 am -- 12:00 noon (15 minute time slots) {\em and} \\ \hspace*{.8in}
+          4:30 pm - 5:00 pm (10 minute time slots)
+	\item Thursday: 4:30 pm - 5:00 pm (10 minute time slots)
+	\item Friday: 11:00 am -- 12:00 noon (15 minute time slots) {\em and} \\ \hspace*{.49in} 3:30 pm -- 4:30 pm (10 minute time slots)
 \end{itemize}
 
 \noindent
