Fixed all of the minor mistakes in the syllabus.

--- a/syllabus/cs591F2014-syllabus.tex
+++ b/syllabus/cs591F2014-syllabus.tex
@@ -35,7 +35,7 @@ then reserving an open time slot.
 
 \subsection*{Course Meeting Schedule}
 
-Discussion, Presentations, and Group Work in Alden 109: \\ Thursday, 1:30 pm -- 2:20 pm and/or Friday, 3:30 pm - 4:20 pm 
+Discussion, Presentations, and Group Work in Alden 109: \\ Monday, 1:30 pm -- 2:20 pm and/or Tuesday, 1:30 pm - 2:20 pm 
 
 \subsection*{Course Description}
 
@@ -109,7 +109,7 @@ academic semester.
 
 \begin{center}
 \begin{tabular}{llll}
-Class Participation & 10\% & Homework Assignments & 60\% \\
+Class Participation & 10\% & Laboratory Assignments & 60\% \\
 Instructor Meetings & 10\% & Final Project & 20\%
 \end{tabular}
 \end{center}
@@ -126,28 +126,28 @@ These grading categories have the following definitions:
 		all of the class sessions. Your participation will take forms such as answering questions about the required
 		reading assignments, asking constructive questions of your group members, giving presentations, and leading a
 		discussion session. Furthermore, all students are required to meet with the course instructor during office
-		hours for a total of sixty minutes during the Fall 2013 semester.  These meetings must be scheduled through the
+		hours for a total of sixty minutes during the Fall 2014 semester.  These meetings must be scheduled through the
 		course instructor's reservation system and documented on a meeting record that you submit on the last day of
 		classes. A student will receive an interim and final grade for these categories.
 
-	\item {\em Homework Assignments}: These assignments invite students to explore the concepts, tools, and techniques
-		that are associated with the development of mobile applications.  All of the homework assignments require the
+	\item {\em Laboratory Assignments}: These assignments invite students to explore the concepts, tools, and techniques
+		that are associated with the development of mobile applications.  All of the laboratory assignments require the
 		use of the provided tools to describe, design, implement, test, deploy, use, and document mobile applications.
 		To ensure that students are ready to develop software in both other classes at Allegheny College and after
-		graduation, the instructor will assign individuals to teams for each of the homework assignments.  Unless
-		specified otherwise, each homework assignment will be due at the beginning of the following week's class
-		session.  Many of the homework assignments in this course will invite students to give both a presentation and a
+		graduation, the instructor will assign individuals to teams for each of the laboratory assignments.  Unless
+		specified otherwise, each laboratory assignment will be due at the beginning of the following week's class
+		session.  Many of the laboratory assignments in this course will invite students to give both a presentation and a
 		demonstration of the software that they described, designed, implemented, tested, and documented. Often,
 		students will also be asked to survey potential users about the strengths and weaknesses of their mobile
 		applications.
 	
-	\item {\em Final Project}: This project will afford you the opportunity to complete a useful and interesting mobile
-		application with the intention of releasing it on the Google Play store.	The final project in this class will
-		require you to apply all of the knowledge and skills that you have accumulated throughout the semester
-		to finish a working Android application and, whenever possible, make it publicly available.  The project will
-		invite you to draw upon both your problem solving skills and your knowledge of the programming languages and tools
-		that support the development of mobile applications. The final project will be completed in groups chosen in
-		consultation with the course instructor.
+        \item {\em Final Project}: This project will afford you the opportunity to complete a useful and interesting
+          mobile application with the intention of presenting it to the class and releasing it on the Google Play store.
+          The final project in this class will require you to apply all of the knowledge and skills that you have
+          accumulated throughout the semester to finish a working Android application and, whenever possible, make it
+          publicly available.  The project will invite you to draw upon both your problem solving skills and your
+          knowledge of the programming languages and tools that support the development of mobile applications. The
+          final project will be completed in groups chosen in consultation with the course instructor.
 		
 \end{itemize}
 
@@ -164,8 +164,8 @@ turn in a one-page document that describes each group member's contribution to t
 
 \subsubsection*{Attendance}
 
-Students may choose to attend one or both of the Thursday and Friday class sessions.  However, students attending the
-Thursday session should anticipate covering similar material during Friday's class.  It is mandatory for all students to
+Students may choose to attend one or both of the Monday and Tuesday class sessions.  However, students attending the
+Monday session should anticipate covering similar material during Tuesday's class.  It is mandatory for all students to
 attend at least one class session every week. If you will not be able to attend a session, then please see the course
 instructor at least one week in advance to describe your situation.  Students who miss more than five unexcused class
 sessions or group project meetings will have their final grade in the course reduced by one letter grade.  Students who
@@ -175,7 +175,7 @@ miss more than ten of the aforementioned events will automatically fail the cour
 
 Throughout the semester, we will experiment with many different tools that mobile application developers use.  The
 course instructor and the department's systems administrator have invested a considerable amount of time to ensure that
-our laboratories support the completion of both the homework assignments and the final project.  To this end, students
+our laboratories support the completion of both the laboratory assignments and the final project.  To this end, students
 are required to complete all assignments and the final project while using the department's laboratory facilities. The
 course instructor and the systems administrator will only be able to devote a limited amount of time to the
 configuration of a student's personal computer or mobile device. Finally, students must take great care when using the
@@ -223,7 +223,7 @@ Please do this as soon as possible to ensure that approved accommodations are im
 
 The Academic Honor Program that governs the entire academic program at Allegheny College is described in the Allegheny
 Course Catalogue.  The Honor Program applies to all work that is submitted for academic credit or to meet non-credit
-requirements for graduation at Allegheny College.  This includes all work assigned for this class (e.g., homework
+requirements for graduation at Allegheny College.  This includes all work assigned for this class (e.g., laboratory 
 assignments and the final project).  All students who have enrolled in the College will work under the Honor Program.
 Each student who has matriculated at the College has acknowledged the following pledge:
 
