Made small changes to the pre file so that it contains final syllabus content.

--- a/syllabus/syllabuspre.tex
+++ b/syllabus/syllabuspre.tex
@@ -105,7 +105,7 @@
     %\immediate\write16{}
     %\immediate\write16{DATE OF HANDOUT?}
     %\read16 to \dateofhandout
-    \def \dateofhandout {September 5 and 6, 2013}
+    \def \dateofhandout {August 26, 2014}
     \lfoot{\sc Handed out on \dateofhandout}
     %\immediate\write16{}
     %\immediate\write16{HANDOUT NUMBER?}
