Adding in the correct office hours and fixing a capitalization error.

--- a/syllabus/cs591F2014-syllabus.tex
+++ b/syllabus/cs591F2014-syllabus.tex
@@ -19,13 +19,13 @@ Dr.\ Gregory M.\ Kapfhammer\\
 \subsection*{Instructor's Office Hours}
 
 \begin{itemize}
-	\itemsep 0em
-	\item Monday: 2:30 pm -- 5:00 pm (15 minute time slots)
-	\item Tuesday: 2:30 pm -- 5:00 pm (15 minute time slots)
-        \item Wednesday: 10:00 am -- 12:00 noon (15 minute time slots) {\em and} \\ \hspace*{.8in}
-          4:30 pm - 5:00 pm (10 minute time slots)
-	\item Thursday: 4:30 pm - 5:00 pm (10 minute time slots)
-	\item Friday: 11:00 am -- 12:00 noon (15 minute time slots) {\em and} \\ \hspace*{.49in} 3:30 pm -- 4:30 pm (10 minute time slots)
+  \itemsep 0em
+  \item Monday: 2:30 pm -- 4:30 pm (15 minute time slots)
+  \item Tuesday: 2:30 pm -- 4:30 pm (15 minute time slots)
+  \item Wednesday: 10:00 am -- 12:00 noon (15 minute time slots) {\em and} \\ \hspace*{.8in}
+    4:30 pm - 6:00 pm (15 minute time slots)
+  \item Thursday: 10:30 am - 11:00 am (10 minute time slots)
+  \item Friday: 11:00 am -- 12:00 noon (10 minute time slots) {\em and} \\ \hspace*{.49in} 3:30 pm -- 4:30 pm (10 minute time slots)
 \end{itemize}
 
 \noindent
@@ -41,14 +41,14 @@ Discussion, Presentations, and Group Work in Alden 109: \\ Monday, 1:30 pm -- 2:
 
 \begin{quote}
 
-	A study of the concepts, principles, and skills needed to successfully describe, design, implement, test, deploy,
-	use, and document mobile applications.  Investigated in the context of Android-based mobile applications running on
-	the Google Nexus 7, topics include conditional logic, iteration, modularity, parameter passing, user interaction,
-	graphical user interfaces, and network communication. Students practice the principles of mobile application
-	development by participating as members of groups tasked with the creation of mobile applications.  One required
-	class session per week. No background in computer science is required. Prerequisites: Permission of the instructor.
-	\\ {\em Two credit group study}.
-	
+  A study of the concepts, principles, and skills needed to successfully describe, design, implement, test, deploy,
+  use, and document mobile applications.  Investigated in the context of Android-based mobile applications running on
+  the Google Nexus 7, topics include conditional logic, iteration, modularity, parameter passing, user interaction,
+  graphical user interfaces, and network communication. Students practice the principles of mobile application
+  development by participating as members of groups tasked with the creation of mobile applications.  One required
+  class session per week. No background in computer science is required. Prerequisites: Permission of the instructor.
+  \\ {\em Two credit group study}.
+
 \end{quote}
 
 \subsection*{Course Objectives}
@@ -108,10 +108,10 @@ approximate and, if the need to do so presents itself, it is possible for the as
 academic semester. 
 
 \begin{center}
-\begin{tabular}{llll}
-Class Participation & 10\% & Laboratory Assignments & 60\% \\
-Instructor Meetings & 10\% & Final Project & 20\%
-\end{tabular}
+  \begin{tabular}{llll}
+    Class Participation & 10\% & Laboratory Assignments & 60\% \\
+    Instructor Meetings & 10\% & Final Project & 20\%
+  \end{tabular}
 \end{center}
 
 \vspace*{-.1in}
@@ -122,33 +122,33 @@ These grading categories have the following definitions:
 
 \begin{itemize}
 
-	\item {\em Class Participation and Instructor Meetings}: All students are required to actively participate during
-		all of the class sessions. Your participation will take forms such as answering questions about the required
-		reading assignments, asking constructive questions of your group members, giving presentations, and leading a
-		discussion session. Furthermore, all students are required to meet with the course instructor during office
-		hours for a total of sixty minutes during the Fall 2014 semester.  These meetings must be scheduled through the
-		course instructor's reservation system and documented on a meeting record that you submit on the last day of
-		classes. A student will receive an interim and final grade for these categories.
+  \item {\em Class Participation and Instructor Meetings}: All students are required to actively participate during
+    all of the class sessions. Your participation will take forms such as answering questions about the required
+    reading assignments, asking constructive questions of your group members, giving presentations, and leading a
+    discussion session. Furthermore, all students are required to meet with the course instructor during office
+    hours for a total of sixty minutes during the Fall 2014 semester.  These meetings must be scheduled through the
+    course instructor's reservation system and documented on a meeting record that you submit on the last day of
+    classes. A student will receive an interim and final grade for these categories.
 
-	\item {\em Laboratory Assignments}: These assignments invite students to explore the concepts, tools, and techniques
-		that are associated with the development of mobile applications.  All of the laboratory assignments require the
-		use of the provided tools to describe, design, implement, test, deploy, use, and document mobile applications.
-		To ensure that students are ready to develop software in both other classes at Allegheny College and after
-		graduation, the instructor will assign individuals to teams for each of the laboratory assignments.  Unless
-		specified otherwise, each laboratory assignment will be due at the beginning of the following week's class
-		session.  Many of the laboratory assignments in this course will invite students to give both a presentation and a
-		demonstration of the software that they described, designed, implemented, tested, and documented. Often,
-		students will also be asked to survey potential users about the strengths and weaknesses of their mobile
-		applications.
-	
-        \item {\em Final Project}: This project will afford you the opportunity to complete a useful and interesting
-          mobile application with the intention of presenting it to the class and releasing it on the Google Play store.
-          The final project in this class will require you to apply all of the knowledge and skills that you have
-          accumulated throughout the semester to finish a working Android application and, whenever possible, make it
-          publicly available.  The project will invite you to draw upon both your problem solving skills and your
-          knowledge of the programming languages and tools that support the development of mobile applications. The
-          final project will be completed in groups chosen in consultation with the course instructor.
-		
+  \item {\em Laboratory Assignments}: These assignments invite students to explore the concepts, tools, and techniques
+    that are associated with the development of mobile applications.  All of the laboratory assignments require the
+    use of the provided tools to describe, design, implement, test, deploy, use, and document mobile applications.
+    To ensure that students are ready to develop software in both other classes at Allegheny College and after
+    graduation, the instructor will assign individuals to teams for each of the laboratory assignments.  Unless
+    specified otherwise, each laboratory assignment will be due at the beginning of the following week's class
+    session.  Many of the laboratory assignments in this course will invite students to give both a presentation and a
+    demonstration of the software that they described, designed, implemented, tested, and documented. Often,
+    students will also be asked to survey potential users about the strengths and weaknesses of their mobile
+    applications.
+
+  \item {\em Final Project}: This project will afford you the opportunity to complete a useful and interesting
+    mobile application with the intention of presenting it to the class and releasing it on the Google Play store.
+    The final project in this class will require you to apply all of the knowledge and skills that you have
+    accumulated throughout the semester to finish a working Android application and, whenever possible, make it
+    publicly available.  The project will invite you to draw upon both your problem solving skills and your
+    knowledge of the programming languages and tools that support the development of mobile applications. The
+    final project will be completed in groups chosen in consultation with the course instructor.
+
 \end{itemize}
 
 \subsubsection*{Assignment Submission}
@@ -199,14 +199,14 @@ will also be required to download, use, and modify programs that are made availa
 Using your Allegheny College email address, I will sometimes send out class announcements about matters such as
 assignment clarifications or changes in the schedule. It is your responsibility to check your email at least once a day
 and to ensure that you can reliably send and receive emails. This class policy is based on the following statement in
-{\em The Compass}, the college's student handbook.
+{\em The Compass}, the College's student handbook.
 
 \vspace*{-.1in}
 \begin{quote}
-``The use of email is a primary method of communication on campus. \ldots
-All students are provided with a campus email account and address while
-enrolled at Allegheny and are expected to check the account on a regular
-basis.'' 
+  ``The use of email is a primary method of communication on campus. \ldots
+  All students are provided with a campus email account and address while
+  enrolled at Allegheny and are expected to check the account on a regular
+  basis.'' 
 \end{quote}
 \vspace*{-.15in}
 
@@ -229,8 +229,8 @@ Each student who has matriculated at the College has acknowledged the following 
 
 \vspace*{-.1in}
 \begin{quote}
-I hereby recognize and pledge to fulfill my responsibilities, as defined in the Honor Code, and to maintain the
-integrity of both myself and the College community as a whole.  
+  I hereby recognize and pledge to fulfill my responsibilities, as defined in the Honor Code, and to maintain the
+  integrity of both myself and the College community as a whole.  
 \end{quote}
 \vspace*{-.15in}
 
