Made small improvements to the second laboratory assignment in cs591F2014.

--- a/labs/lab2/cs591F2014-lab2.tex
+++ b/labs/lab2/cs591F2014-lab2.tex
@@ -1,10 +1,12 @@
+%!TEX root=cs591F2014-lab2.tex
+% mainfile: cs591F2014-lab2.tex 
 \input{hwpre.tex}
 
 \usepackage[compact]{titlesec}
 
 \begin{document}
-\MYTITLE{Homework Assignment Two: Using Conditional Logic in Automation Tasks}
-\MYHEADERS{Homework Assignment Two}{Due: September 19 and 20, 2013}
+\MYTITLE{Laboratory Assignment Two: Using Conditional Logic in Automation Tasks}
+\MYHEADERS{Laboratory Assignment Two}{Due: September 15 and 16, 2014}
 
 \section*{Introduction}
 
