Fixed a few small problems in the lab2 assignment for cs591F2014.

--- a/labs/lab2/cs591F2014-lab2.tex
+++ b/labs/lab2/cs591F2014-lab2.tex
@@ -34,14 +34,14 @@ and click the plus sign to create a new profile.  Next, pick a category from the
 context for your new profile.  For instance, you could specify that it is a certain time of the day or that the display
 unlocked event just took place. Finally, you should add the ``Display Notification'' task to this profile.  Do you now
 see a green arrow indicating that ``Display Notification'' will run when your specified context is true?  Please see the
-instructor if you are not able to complete these steps.
+instructor if you are not able to complete these steps or have other questions.
 
 Now that you have finished programming your first automation task, you should test it to ensure that it works correctly.
 For instance, if you indicated that ``Display Notification'' should run when the screen is unlocked, then lock and
 unlock the screen and see if the notification appears.  Once you have finished experimenting with your first task, you
 should implement at least two others, for a total of three automation tasks. Each of the tasks that you implement should
 display a notification when the specified condition(s) are true.  Students are encouraged to develop profile contexts that
-contain multiple conditions that are joined by a plus sign representing the logical and operator. 
+contain multiple conditions that are joined by a plus sign representing the ``logical and'' operator. 
 
 % \section*{Summary of the Required Deliverables}
 
