Updated the header for the second lab assignment.

--- a/labs/lab2/hwpre.tex
+++ b/labs/lab2/hwpre.tex
@@ -1,3 +1,6 @@
+%!TEX root=cs591F2014-lab2.tex
+% mainfile: cs591F2014-lab2.tex 
+
 % CS 580 style
 % Typical usage (all UPPERCASE items are optional):
 %       \input 580pre
@@ -89,7 +92,7 @@
      \begin{center}
      \bf
      CMPSC 591\\Principles of Mobile Applications\\
-     Fall 2013
+     Fall 2014
      \medskip
      \end{center}
      \bf
@@ -105,7 +108,7 @@
     %\immediate\write16{}
     %\immediate\write16{DATE OF HANDOUT?}
     %\read16 to \dateofhandout
-    \def \dateofhandout {September 12 and 13, 2013}
+    \def \dateofhandout {September 8 and 9, 2014}
     \lfoot{\sc Handed out on \dateofhandout}
     %\immediate\write16{}
     %\immediate\write16{HANDOUT NUMBER?}
