Making small fixes to the fourth lab4 assignment. Seems ready.

--- a/labs/lab4/cs591F2014-lab4.tex
+++ b/labs/lab4/cs591F2014-lab4.tex
@@ -1,19 +1,22 @@
+%!TEX root=cs591F2014-lab4.tex
+% mainfile: cs591F2014-lab4.tex 
+
 \input{hwpre.tex}
 
 \usepackage[compact]{titlesec}
 
 \begin{document}
-\MYTITLE{Homework Assignment Four: Implementing and Evaluating Automation Tasks}
-\MYHEADERS{Homework Assignment Four}{Due: October 10 and 11, 2013}
+\MYTITLE{Laboratory Assignment Four: Implementing and Evaluating Automation Tasks}
+\MYHEADERS{Laboratory Assignment Four}{Due: October 6 and 7, 2014}
 
 \section*{Introduction}
 
-In the last three homework assignments you have learned more about the Android operating system and the Tasker
-automation environment. Since we will continue to use Tasker in this laboratory assignment, you may want to continue to
-learn more about it by visiting \url{http://tasker.dinglisch.net/}.  Now, for this homework assignment, you will work in
-teams of four or five students to describe, design, implement, test, and evaluate one or more Tasker automation tasks.
-Over the next two weeks, you will be responsible for organizing a team and then working with your team members to
-complete task(s) that usefully automate the interaction with the Android operating system.
+In the last three laboratory assignments you have learned more about the Android operating system and the Tasker
+automation environment. Since we will keep using Tasker in this laboratory assignment, you may want to learn more about
+it by visiting \url{http://tasker.dinglisch.net/}.  Now, for this laboratory assignment, you will work in teams of four
+or five students to describe, design, implement, test, and evaluate one or more Tasker automation tasks.  Over the next
+two weeks, you will be responsible for organizing a team and then working with your team members to complete task(s)
+that usefully automate the interaction with the Android operating system.
 
 \section*{Automation Tasks for Android}
 
