--- a/labs/lab5/cs591F2014-lab5.tex
+++ b/labs/lab5/cs591F2014-lab5.tex
@@ -1,66 +1,61 @@
-%!TEX root=cs591F2014-lab4.tex
-% mainfile: cs591F2014-lab4.tex 
+%!TEX root=cs591F2014-lab5.tex
+% mainfile: cs591F2014-lab5.tex 
 
 \input{hwpre.tex}
 
 \usepackage[compact]{titlesec}
 
 \begin{document}
-\MYTITLE{Laboratory Assignment Four: Implementing and Evaluating Automation Tasks}
-\MYHEADERS{Laboratory Assignment Four}{Due: October 6 and 7, 2014}
+\MYTITLE{Laboratory Assignment Five: Implementing Graphical Apps with Generate}
+\MYHEADERS{Laboratory Assignment Five}{Due: November 3 and 4, 2014}
 
 \section*{Introduction}
 
-In the last three laboratory assignments you have learned more about the Android operating system and the Tasker
-automation environment. Since we will keep using Tasker in this laboratory assignment, you may want to learn more about
-it by visiting \url{http://tasker.dinglisch.net/}.  Now, for this laboratory assignment, you will work in teams of four
-or five students to describe, design, implement, test, and evaluate one or more Tasker automation tasks.  Over the next
-two weeks, you will be responsible for organizing a team and then working with your team members to complete task(s)
-that usefully automate the interaction with the Android operating system.
+In this laboratory assignment, you will explore the creation of interactive visualizations using the ``Generate:
+Generative Art Tool'' app available for download from the Google Play store. This app allows you to write programs in
+the ``Context Free Art'' programming language that produce colorful, interesting, and interactive visualizations. You can
+learn more about this approach to programming by reviewing the in-app help system and the provided ``Context Free in a
+Nutshell'' handout and, finally, by visiting the following Web site: \url{http://www.contextfreeart.org/}.
 
-\section*{Automation Tasks for Android}
+\section*{Exploring and Enhancing ``Generate'' Graphics}
 
-After brainstorming ideas with your team members, you should identify your top three candidates for automation tasks.
-Next, you should prepare a document that explains your motivation for implementing one or more of these tasks.  After
-completing this first part of the document, you should clearly specify the input(s), output(s), and behavior of your
-tasks. Now, fairly divide up the implementation and testing effort associated with finishing your tasks. 
+To start this assignment, you must go to the Google Play store and download ``Generate: Generative Art Tool''.  Then,
+you should review the aforementioned handout and Web site to learn more about how you can program in this language.  For
+instance, you should notice that Generate will allow you to display circles and squares using the {\tt CIRCLE} and {\tt
+SQUARE} directives.  You can also control the hue, saturation, and brightness of these shapes by respectively using the
+``{\tt hue n}'', ``{\tt sat n}'', and ``{\tt b n}'' parameters. There is also a {\tt background} primitive that allows
+you to specify the color to which the background will be assigned. The idea behind Generate programs is that there is a
+start rule that is applied when the program is first run, specified by the {\tt startshape} command.  Additionally, you
+can define {\tt TOUCH} rules that are activated only when the screen is touched.
 
-Once you have completed the implementation of the automation tasks, you should invite between three and five Allegheny
-College students who are not members of this class to participate in a user study to evaluate your system.  After an
-individual agrees to participate in your study, invite them to Alden Hall between 8:00 am and 4:00 pm so that they can
-try out your tasks on one of the Nexus 7 tablets. When your friends are using your tasks, you should observe their
-interactions and take notes.  Once they are finished interacting with the tablet, you should ask them a series of
-questions to learn more about what they liked and disliked about your automation tasks.  
-
-Finally, you should prepare slides for a short presentation and demonstration that you will give in class on the date
-that this assignment is due.  The presentation should give an overview of the content that is in your written document,
-briefly summarizing your motivation for implementing the tasks, explaining how the tasks were implemented, stating the inputs,
-outputs, and behavior of the tasks, and highlighting the most important points from the feedback given by the users.
-
-% \section*{Summary of the Required Deliverables}
+One way to better understand how to program the Generate app is to review the ``Simple First'' example.  You can cause
+this program to produce its visualization by clicking the ``Run'' button at the top of the screen. What is the output
+that results from running this program? Can you understand how this program produces this output? Once you understand
+this basic example, you should enhance it so that it sets the background to a different color than white. In addition,
+you can change the rule that creates the square so that it now produces a circle. Now, you should also change the
+source code that draws the circle so that it uses a different color than black. To learn more about the ``Context Free
+Art'' programming language you should study the source code of and run at least five other provided programs; please see
+the instructor if you have questions.
 
 % \vspace*{-.05in}
 \noindent
 To complete the assignment, you should turn in one copy of the following signed printouts: 
-\vspace*{-.1in}
+% \vspace*{-.1in}
+
 \begin{enumerate}
     \itemsep0em
 
-	\item Description of at least three automation tasks that your team could implement
+	\item The output from running at least five of the Generate sample programs.
 		
-	\item Complete documentation that describes the following aspects of your chosen automation tasks
+	\item A screenshot of the final source code of the modified ``Simple First'' example.
 
-\vspace*{-.05in}
-\begin{enumerate}
-	\item Motivation for implementing the chosen tasks
-	\item Inputs, outputs, and behavior of the tasks
-	\item Implementation and testing choices for the tasks
-\end{enumerate}
-\vspace*{-.05in}
+	\item The output from running the original and final versions of the ``Simple First'' program.
 
-	\item Report on the results from the user study that you performed with your automation tasks
+	\item A written explanation of how the final ``Simple First'' program actually works.
 
-	\item Presentation slides for the in-class talk and demonstration that you will give in two weeks
+        \item A written description of the challenges that you faced when programming in Generate.
+
+          \item A proposal for at least three Generate programs that you would like to implement.
 
 \end{enumerate}
 
