Updating to the current versions of the lab5 assignment.

--- a/labs/lab5/cs591F2014-lab5.tex
+++ b/labs/lab5/cs591F2014-lab5.tex
@@ -12,8 +12,8 @@
 \section*{Introduction}
 
 In this laboratory assignment, you will explore the creation of interactive visualizations using the ``Generate:
-Generative Art Tool'' app available for download from the Google Play store. This app allows you to write programs in
-the ``Context Free Art'' programming language that produce colorful, interesting, and interactive visualizations. You can
+Generative Art Tool'' app available for download from the Google Play store. This app allows you to write programs, in
+the ``Context Free Art'' programming language, that produce colorful, interesting, and interactive visualizations. You can
 learn more about this approach to programming by reviewing the in-app help system and the provided ``Context Free in a
 Nutshell'' handout and, finally, by visiting the following Web site: \url{http://www.contextfreeart.org/}.
 
@@ -32,7 +32,7 @@ One way to better understand how to program the Generate app is to review the ``
 this program to produce its visualization by clicking the ``Run'' button at the top of the screen. What is the output
 that results from running this program? Can you understand how this program produces this output? Once you understand
 this basic example, you should enhance it so that it sets the background to a different color than white. In addition,
-you can change the rule that creates the square so that it now produces a circle. Now, you should also change the
+you can change the rule that creates the square so that it now produces a circle. Next, you should also change the
 source code that draws the circle so that it uses a different color than black. To learn more about the ``Context Free
 Art'' programming language you should study the source code of and run at least five other provided programs; please see
 the instructor if you have questions.
@@ -51,7 +51,7 @@ To complete the assignment, you should turn in one copy of the following signed 
 
 	\item The output from running the original and final versions of the ``Simple First'' program.
 
-	\item A written explanation of how the final ``Simple First'' program actually works.
+	\item A written explanation of how your final ``Simple First'' program actually works.
 
         \item A written description of the challenges that you faced when programming in Generate.
 
