Fixing title and header details for the lab6 assignment.

--- a/labs/lab6/cs591F2014-lab6.tex
+++ b/labs/lab6/cs591F2014-lab6.tex
@@ -6,8 +6,8 @@
 \usepackage[compact]{titlesec}
 
 \begin{document}
-\MYTITLE{Homework Assignment Five: Installing and Configuring AppInventor}
-\MYHEADERS{Homework Assignment Five}{Due: October 24 and 25, 2013}
+\MYTITLE{Homework Assignment Six: Exploring the Basics of AppInventor 2}
+\MYHEADERS{Homework Assignment Six}{Due: November 10 and 11, 2014}
 
 \vspace*{-.1in}
 \section*{Introduction}
