Removed all of the text that is not needed for the lab6 assignment.

--- a/labs/lab6/cs591F2014-lab6.tex
+++ b/labs/lab6/cs591F2014-lab6.tex
@@ -6,8 +6,8 @@
 \usepackage[compact]{titlesec}
 
 \begin{document}
-\MYTITLE{Homework Assignment Six: Exploring the Basics of AppInventor 2}
-\MYHEADERS{Homework Assignment Six}{Due: November 10 and 11, 2014}
+\MYTITLE{Laboratory Assignment Six: Exploring the Basics of AppInventor 2}
+\MYHEADERS{Laboratory Assignment Six}{Due: November 10 and 11, 2014}
 
 \vspace*{-.1in}
 \section*{Introduction}
@@ -20,36 +20,18 @@ instructor.
 
 \section*{Installing and Configuring AppInventor}
 
-Before you start this assignment, please make sure that you are sitting at a laboratory computer that has a USB cable
-available for your use.  Furthermore, you must ensure that when you checkout your Nexus 7 tablet you also take the USB
-cable that is used to connect it to the power supply.  After logging into your workstation, carefully connect your 
-tablet to the workstation's USB cable.
 
-When you go to the settings section of the Android operating system, you will notice that the ``Developer options'' menu
-item is not currently available to you.  Since we need this item and the features that it provides, you will need to investigate
-how to enable it for the ``Jelly Bean'' version of Android.  What trick did you discover?  Once the discover how to
-enable this menu, please turn on USB debugging and take a screen shot to demonstrate that you have completed this task.
 
 After configuring your tablet and visiting the Web site \url{http://appinventor.mit.edu/}, you should click the
 ``Invent'' button and log into AppInventor using your {\tt allegheny.edu} email address.  What do you see on the screen?
 What are the key features of AppInventor? How does it work?
 
-Now, we have to make sure that your tablet is correctly recognized by the Ubuntu operating system on your workstation.
-Open a terminal window and type the command {\tt adb devices}.  If this command does not return output indicating that
-your tablet is properly registered with the workstation, then further investigate this issue.  Next, you should return
-to your tablet and install the app called ``MIT AI Companion''. See the instructor if you have problems with
-these steps.
 
-Once your tablet is properly registered with the workstation and the app is installed on the tablet, you should click a
-button in the AppInventor window that will run the ``Blocks Editor''.  Next, make sure that AppInventor can connect to
-your tablet.  Once you think that this process worked correctly, you should take a screen shot on both your workstation
-and tablet.
 
 % In the next homework assignment, you will be asked to implement an app using AppInventor.  
 
-As the final task for this
-homework assignment, you should browse the provided text book and several online sources as you brainstorm examples of
-five apps that you could ultimately implement.
+As the final task for this homework assignment, you should browse the provided text book and several online sources as
+you brainstorm examples of five apps that you could ultimately implement.
 
 % \section*{Summary of the Required Deliverables}
 
