Adding more content to the lab6 assignment. Fixed the header and footer.

--- a/labs/lab6/cs591F2014-lab6.tex
+++ b/labs/lab6/cs591F2014-lab6.tex
@@ -12,19 +12,24 @@
 \vspace*{-.1in}
 \section*{Introduction}
 
-In this homework assignment, we will investigate the use of new tools for implementing mobile applications for the
-Android operating system, with a focus on the AppInventor system developed jointly by Google and the
-Massachusetts Institute of Technology.  You can learn more about AppInventor by visiting the Web site
-\url{http://appinventor.mit.edu/} and browsing the chapters in the AppInventor textbook provided by the course
-instructor.
+In this laboratory assignment, we will investigate the use of new tools for implementing mobile applications for the
+Android operating system, with a focus on the AppInventor 2 system jointly developed by Google and the Massachusetts
+Institute of Technology.  You can learn more about AppInventor 2 by visiting the Web site
+\url{http://ai2.appinventor.mit.edu/} and browsing the chapters in the AppInventor 2 textbook available online at
+\url{http://www.appinventor.org/book2}.
 
-\section*{Installing and Configuring AppInventor}
+\section*{Configuring and Using AppInventor 2}
 
+Before you visit the first Web site mentioned in the previous section, you should install a QR code reader, such as ``QR
+Code Reader'' on your tablet. Now, go to this first Web site and log into it using your ``{\tt @allegheny.edu}''
+account. What do you see on the screen? What seems to be some of the key features of AppInventor 2? Once you have
+investigated this program's integrated development environment (IDE), please click on the link labelled ``Set up and
+connect an Android device'' and study the details about making a WIFI connection. 
 
+Following these instructions and ultimately using the QR code reader that you installed, scan the QR code created by
+AppInventor 2. Please see the course instructor if you are not able to connect your tablet to the development
+workstation through ``Allegheny Wireless''.
 
-After configuring your tablet and visiting the Web site \url{http://appinventor.mit.edu/}, you should click the
-``Invent'' button and log into AppInventor using your {\tt allegheny.edu} email address.  What do you see on the screen?
-What are the key features of AppInventor? How does it work?
 
 
 
