Revision of the lab6 assignment before making final changes.

--- a/labs/lab6/cs591F2014-lab6.tex
+++ b/labs/lab6/cs591F2014-lab6.tex
@@ -24,32 +24,41 @@ Before you visit the first Web site mentioned in the previous section, you shoul
 Code Reader'' on your tablet. Now, go to this first Web site and log into it using your ``{\tt @allegheny.edu}''
 account. What do you see on the screen? What seems to be some of the key features of AppInventor 2? Once you have
 investigated this program's integrated development environment (IDE), please click on the link labelled ``Set up and
-connect an Android device'' and study the details about making a WIFI connection. 
+connect an Android device'' and study the tutorial that explains how to correctly make a WIFI connection. 
 
 Following these instructions and ultimately using the QR code reader that you installed, scan the QR code created by
-AppInventor 2. Please see the course instructor if you are not able to connect your tablet to the development
-workstation through ``Allegheny Wireless''.
+AppInventor 2 and download the correct app. At this point, you can create a new project called, for
+example, ``AI2 Button Experiment''. Now, click ``Connect'' and then select ``AI Companion'' and scan the new QR code.
+Please see the course instructor if you are not able to connect your tablet
+to the development workstation through ``Allegheny Wireless''. 
 
+Using the ``Designer'' environment, find the ``Button'' widget and add one to the mobile device in the middle of your
+screen.  Please make sure that the button appears on both the development machine and your tablet---if it does not
+appear on the tablet, then you may need to reconnect through the wireless network. Now, start the ``Blocks'' environment
+by clicking this button on the right-hand side of the IDE. You can use this environment to define the behavior
+of the button.  Please add ``puzzle pieces''---that is, visual program instructions---that will control the button. At
+minimum, you should cause the button to change to red when it is clicked and then turn blue when it is long clicked; of
+course, you can add new widgets and behaviors to your app as well.
 
-
-
-% In the next homework assignment, you will be asked to implement an app using AppInventor.  
-
-As the final task for this homework assignment, you should browse the provided text book and several online sources as
-you brainstorm examples of five apps that you could ultimately implement.
+Finally, you should create the app so that it can run, stand-alone, on your tablet. Click the ``Build'' menu item at the
+top of the screen and then follow all of the instructions to download the app to your tablet by again scanning a QR
+code.  As the final task for this laboratory assignment, you should online sources, such as
+\url{http://appinventor.mit.edu/explore/ai2/tutorials.html}, to assist you in brainstorming examples of five apps that
+you could create with AppInventor 2. To complete the assignment, you should turn in one copy of the following signed
+printouts: 
 
 % \section*{Summary of the Required Deliverables}
 
 % \vspace*{-.05in}
-\noindent
-To complete the assignment, you should turn in one copy of the following signed printouts: 
+% \noindent
+
 \vspace*{-.1in}
 
 \begin{enumerate}
 	\itemsep0em
-	\item A description of the steps that you took to turn on the developer options
-	\item Screen shots that convincingly demonstrate that you correctly configured AppInventor
-	\item The complete description of five ideas for apps that you could create in AppInventor
+	\item A description of the steps that you took  to create your first AppInventor 2 project.
+	\item Screen shots that convincingly demonstrate that you correctly configured AppInventor 2.
+	\item The complete description of five ideas for apps that you could create in AppInventor 2.
 \end{enumerate}
 
 % \begin{enumerate}
