Fixed all of the small marked mistakes in the lab6 assignment.

--- a/labs/lab6/cs591F2014-lab6.tex
+++ b/labs/lab6/cs591F2014-lab6.tex
@@ -12,10 +12,10 @@
 \vspace*{-.1in}
 \section*{Introduction}
 
-In this laboratory assignment, we will investigate the use of new tools for implementing mobile applications for the
-Android operating system, with a focus on the AppInventor 2 system jointly developed by Google and the Massachusetts
+In this laboratory assignment, we will investigate the use of new tools for implementing mobile applications running on
+the Android operating system, with a focus on the AppInventor 2 system jointly developed by Google and the Massachusetts
 Institute of Technology.  You can learn more about AppInventor 2 by visiting the Web site
-\url{http://ai2.appinventor.mit.edu/} and browsing the chapters in the AppInventor 2 textbook available online at
+\url{http://ai2.appinventor.mit.edu/} and browsing the chapters in the AppInventor 2 textbook available at
 \url{http://www.appinventor.org/book2}.
 
 \section*{Configuring and Using AppInventor 2}
@@ -24,7 +24,7 @@ Before you visit the first Web site mentioned in the previous section, you shoul
 Code Reader'' on your tablet. Now, go to this first Web site and log into it using your ``{\tt @allegheny.edu}''
 account. What do you see on the screen? What seems to be some of the key features of AppInventor 2? Once you have
 investigated this program's integrated development environment (IDE), please click on the link labelled ``Set up and
-connect an Android device'' and study the tutorial that explains how to correctly make a WIFI connection. 
+connect an Android device'' and study the tutorial that explains how to correctly make a WiFi connection. 
 
 Following these instructions and ultimately using the QR code reader that you installed, scan the QR code created by
 AppInventor 2 and download the correct app. At this point, you can create a new project called, for
@@ -38,14 +38,14 @@ appear on the tablet, then you may need to reconnect through the wireless networ
 by clicking this button on the right-hand side of the IDE. You can use this environment to define the behavior
 of the button.  Please add ``puzzle pieces''---that is, visual program instructions---that will control the button. At
 minimum, you should cause the button to change to red when it is clicked and then turn blue when it is long clicked; of
-course, you can add new widgets and behaviors to your app as well.
+course, you can add extra widgets and behaviors to your app as well.
 
 Finally, you should create the app so that it can run, stand-alone, on your tablet. Click the ``Build'' menu item at the
 top of the screen and then follow all of the instructions to download the app to your tablet by again scanning a QR
-code.  As the final task for this laboratory assignment, you should online sources, such as
+code.  As the final task for this laboratory assignment, you should consult online sources, such as
 \url{http://appinventor.mit.edu/explore/ai2/tutorials.html}, to assist you in brainstorming examples of five apps that
-you could create with AppInventor 2. To complete the assignment, you should turn in one copy of the following signed
-printouts: 
+you could create with AppInventor 2. To complete the assignment, you should turn in a copy of these \mbox{signed
+  printouts}: 
 
 % \section*{Summary of the Required Deliverables}
 
